zingle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zingle
  labels:
    app: zingle
spec:
  selector:
    matchLabels:
      app: zingle
  template:
    metadata:
      labels:
        app: zingle
    spec:
      containers:
      - name: zingle
        image: docker.io/library/php_php:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: zingle-cache
          mountPath: /opt/app-root/src/bootstrap/cache
      - name: redis
        image: redis:5.0.4
        command: ["redis-server", "/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /var/lib/redis
          name: zingle-redis-data
        - mountPath: /etc/redis
          name: zingle-redis-conf
      volumes:
      - name: zingle-cache
        emptyDir: {}
      - name: zingle-redis-data
        emptyDir: {}
      - name: zingle-redis-conf
        configMap:
          name: redis-conf
          items:
          - key: redis-conf
            path: redis.conf
