zingle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zingle
spec:
  selector:
    app: zingle
  ports:
  - port: 9000
    targetPort: 9000
    name: fastcgi
