zingle/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "zingle"
  name: zingle
spec:
  ingressClassName: nginx
  rules:
  - host: app.zingle.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zingle
            port:
              name: fastcgi
  - host: api.zingle.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zingle
            port:
              name: fastcgi
